@@ -7,8 +7,11 @@ c - crash     b - bug fix    e - enhancement    f - new feature
   e - Set PBS_MAXUSER to 32 from 16 in order to accomodate systems that 
       use a 32 bit user name.(Ken Nielson Cluster Resources)
   c - modified acct_job in server/accounting.c to dynamically allocate memory
-      to accomodate strings larger than PBS_ACCT_MAX_RCD. (Ken Nielson Cluster Resources)
-  e - moving jobs can now trigger a scheduling iteration    
+      to accomodate strings larger than PBS_ACCT_MAX_RCD. (Ken Nielson Cluster 
+      Resources)
+  e - moving jobs can now trigger a scheduling iteration
+  b - fix how qsub sets PBS_O_HOST and PBS_SERVER (Eirikur Hjartarson, deCODE 
+      genetics)
 
 2.3.7
   e - pbs_mom sisters can now tolerate an explicit group ID instead of only a 
